prevented overflow in pre blocks

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,7 @@ nav {
 
         pre {
             padding-left: 4em;
+            overflow-y: scroll;
         }
     }
 }
